--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,28 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.overlay{
+  height: 0;
+  width: 100%;
+  background: linear-gradient(transparent, rgb(155, 154, 154), white);
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  padding: 40px;
   text-align: center;
+  font-size: 14px;
+  transition: height 0.5s;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.overlay h1{
+  font-weight: 500;
+  margin-bottom: 5px;
+  margin-top: 80%;
+  letter-spacing: 2px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* .boxLhover img{
+  transform: scale(1.2);
+} */
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.box:hover .overlay{
+  height: 120%;
 }
